--- a/templates/dialogtech.template.yaml
+++ b/templates/dialogtech.template.yaml
@@ -73,7 +73,7 @@ Resources:
             - logs:CreateLogGroup
             - logs:CreateLogStream
             - logs:PutLogEvents
-            Resource: arn:aws:logs:*:*:*
+            Resource: !Sub 'arn:${AWS::Partition}:logs:*:*:*'
   DialogtechTestLambda:
     Type: AWS::Lambda::Function
     Properties:
@@ -83,7 +83,7 @@ Resources:
       Code:
         S3Bucket: aws-quickstart
         S3Key: connect-integration-dialogtech/functions/packages/dialogtech-integration-test/dialogtech-integration-test.zip
-      Runtime: nodejs6.10
+      Runtime: nodejs18.x
       Timeout: '10'
   IntegrationTest:
     Type: Custom::IntegrationTest
@@ -105,7 +105,7 @@ Resources:
       Code:
         S3Bucket: aws-quickstart
         S3Key: connect-integration-dialogtech/functions/packages/dialogtech-integration/dialogtech-integration.zip
-      Runtime: nodejs6.10
+      Runtime: nodejs18.x
       Timeout: 10
       Environment:
         Variables:
