Added exception for EIAM rules

--- a/templates/dialogtech.template.yaml
+++ b/templates/dialogtech.template.yaml
@@ -1,14 +1,13 @@
----
 AWSTemplateFormatVersion: '2010-09-09'
 Description: DialogTech Integration for Amazon Connect Quick Start (qs-1nr3h4h6r)
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
-    - Label:
-        default: Amazon Connect DialogTech Integration
-      Parameters:
-      - DKey
-      - DSecret
+      - Label:
+          default: Amazon Connect DialogTech Integration
+        Parameters:
+          - DKey
+          - DSecret
     ParameterLabels:
       DKey:
         default: DialogTech Key
@@ -17,39 +16,37 @@ Metadata:
 Parameters:
   DKey:
     Default: ''
-    Description: In order to access the DialogTech API, users will first need to generate
-      API keys. Please visit https://secure.dialogtech.com/key-manager to generate
-      a key and secret before launching this template.
+    Description: In order to access the DialogTech API, users will first need to generate API keys. Please visit https://secure.dialogtech.com/key-manager to generate a key and secret before launching this
+      template.
     Type: String
   DSecret:
     Default: ''
-    Description: Please provide the generated API secret obtained from the DialogTech
-      Access Key Manager as detailed in the step above.
+    Description: Please provide the generated API secret obtained from the DialogTech Access Key Manager as detailed in the step above.
     Type: String
 Rules:
   RegionSupport:
     Assertions:
-    - Assert:
-        Fn::Equals:
-        - Ref: AWS::Region
-        - us-east-1
-      AssertDescription: Region must be US East (N. Virginia) - us-east-1
+      - Assert:
+          Fn::Equals:
+            - Ref: AWS::Region
+            - us-east-1
+        AssertDescription: Region must be US East (N. Virginia) - us-east-1
   DKeyParameterDefaults:
     Assertions:
-    - Assert:
-        Fn::Not:
-        - Fn::Equals:
-          - Ref: DKey
-          - ''
-      AssertDescription: Amazon Connect DialogTech Integration key cannot be empty
+      - Assert:
+          Fn::Not:
+            - Fn::Equals:
+                - Ref: DKey
+                - ''
+        AssertDescription: Amazon Connect DialogTech Integration key cannot be empty
   DSecretParameterDefaults:
     Assertions:
-    - Assert:
-        Fn::Not:
-        - Fn::Equals:
-          - Ref: DSecret
-          - ''
-      AssertDescription: Amazon Connect DialogTech Integration secret cannot be empty
+      - Assert:
+          Fn::Not:
+            - Fn::Equals:
+                - Ref: DSecret
+                - ''
+        AssertDescription: Amazon Connect DialogTech Integration secret cannot be empty
 Resources:
   LambdaExecutionRole:
     Type: AWS::IAM::Role
@@ -57,23 +54,24 @@ Resources:
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
-        - Effect: Allow
-          Principal:
-            Service:
-            - lambda.amazonaws.com
-          Action:
-          - sts:AssumeRole
-      Policies:
-      - PolicyName: lambdalogtocloudwatch
-        PolicyDocument:
-          Version: '2012-10-17'
-          Statement:
           - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
             Action:
-            - logs:CreateLogGroup
-            - logs:CreateLogStream
-            - logs:PutLogEvents
-            Resource: !Sub 'arn:${AWS::Partition}:logs:*:*:*'
+              - sts:AssumeRole
+      Policies:
+        - PolicyName: lambdalogtocloudwatch
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - logs:CreateLogGroup
+                  - logs:CreateLogStream
+                  - logs:PutLogEvents
+                Resource:
+                  Fn::Sub: arn:${AWS::Partition}:logs:*:*:*
   DialogtechTestLambda:
     Type: AWS::Lambda::Function
     Properties:
@@ -131,4 +129,3 @@ Outputs:
     Description: Lambda Function for Dialogtech Integration
     Value:
       Fn::GetAtt: DialogtechLambda.Arn
-...
